fixed mobile layout issues!!!!

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -30,16 +30,19 @@ h1 {
 
 
 .hero-image {
+    width: 100%;
     height: 100%;
-
+    object-fit: cover;
+    border-radius: 6px;
 }
 
 .img-crop {
     max-width: 317px;
     aspect-ratio: 4/5;
     border-radius: 6px;
-    overflow: hidden;
+    /* overflow: hidden; */ /* Can be uncommented if needed for cropping */
 }
+
 
 .search-and-button-container {
     display: flex;
