--- a/src/components/Section2/Section2MediaQueries.css
+++ b/src/components/Section2/Section2MediaQueries.css
@@ -15,7 +15,6 @@
     .s2-content-wrapper {
         align-items: start;
         margin-top: 62px;
-        height: 900px;
     }
     .s2-button-container > :last-child {
         margin-top: 10px;
